prevention mobile

--- a/covid-19/src/styles/prevention.sass
+++ b/covid-19/src/styles/prevention.sass
@@ -40,3 +40,42 @@
 				font-size: 18px
 				line-height: 2.21
 				text-transform: capitalize
+@media screen and (max-width: 550px)
+	.prevention
+		padding: 0 5%
+@media screen and (max-width: 767px)
+	.prevention
+		padding: 0 15%
+		&__block
+			display: block
+			padding-left: 0
+			margin-bottom: 20px
+			&:nth-of-type(2n)
+				img
+					margin-right: auto
+					margin-left: auto
+			img
+				max-width: 250px
+				width: 100%
+				max-height: 250px
+				display: block
+				margin: 0 auto
+			&__text
+				div
+					display: inline-block
+					max-width: 75px
+					max-height: 75px
+					min-width: 75px
+					min-height: 75px
+					font-size: 44px
+					line-height: 75px
+					margin-right: 20px
+					margin-left: 0
+				.title-green
+					font-size: 20px
+					text-transform: capitalize
+					display: inline-block
+				.text
+					font-size: 16px
+					line-height: 2.21
+					text-transform: capitalize
